# Personal_Finance_Tracker

./: Finance_Tracker.postman_collection.json  Finance_Tracker.yaml  Personal Finance Tracker - Project Proposal md.md  Personal Finance Tracker - Project Proposal.md  README.md  inject_data.py
backend/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
backend/migrations/: 20251102021659_init.sql  clear_all_data.sql  run_migration.sh
backend/src/: accounts.rs  auth.rs  budgets.rs  categories.rs  main.rs  middleware.rs  models.rs  transactions.rs
frontend/: Cargo.toml
frontend/src/: api.rs  main.rs  models.rs
